Fix alignment in checkbox

--- a/src/styles/components/_c-form.scss
+++ b/src/styles/components/_c-form.scss
@@ -81,7 +81,6 @@
     padding-top: 10px;
 
     input, .delete-button, .user-label, .c-checkbox {
-      margin-right: 10px;
       flex: 1;
     }
     
